# Mocari

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: show_model.rs
mocari-ffi/: Cargo.toml  README.md
mocari-ffi/include/: mocari.h
mocari-ffi/src/: lib.rs
mocari-ffi/tests/: c_smoke.c
src/: assets.rs  error.rs  expression.rs  lib.rs  motion.rs  runtime.rs
src/core/: art_mesh.rs  deformers.rs  keyforms.rs  math.rs  mod.rs  parameters.rs  physics.rs  update_order.rs
src/json/: cdi3.rs  mod.rs  model3.rs  motion3.rs  physics3.rs  pose3.rs
src/moc3/: art_meshes.rs  canvas.rs  compose.rs  deformers.rs  draw_order_groups.rs  drawable.rs  keyform_bindings.rs  keyforms.rs  mesh_build.rs  mod.rs  offscreen.rs  parse.rs  parts.rs
src/render/: wgpu.rs
src/render/common/: clipping.rs  mod.rs  vertex.rs
src/render/shaders/: live2d.wgsl  live2d_masked.wgsl  mask.wgsl
src/render/wgpu/: buffers.rs  clipping.rs  draw.rs  mod.rs  pipeline.rs  texture.rs
tests/: cdi3.rs  core.rs  core_art_mesh.rs  core_deformers.rs  core_interpolation.rs  core_keyforms.rs  core_parameters.rs  core_update_order.rs  default_model_assets.rs  errors.rs  json.rs  math.rs  moc3_art_mesh_keyforms.rs  moc3_art_meshes.rs  moc3_canvas.rs  moc3_parsing.rs  model3.rs  motion3.rs  physics3.rs  physics_math.rs  pose3.rs  render_common.rs  runtime.rs  sample_zip.rs  wgpu_renderer.rs
