[package]
name = "rusty-live2d"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wgpu = { version = "29.0.3", features = ["noop"] }

[dev-dependencies]
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
